--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.application.name=courseManagement
 spring.datasource.url=jdbc:mysql://localhost:3306/studies
 spring.datasource.username=root
 spring.datasource.password=$harena=3
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.format_sql = false
